minor css fixes and fixed alignment issues with sillyquote

--- a/src/habit.css
+++ b/src/habit.css
@@ -68,6 +68,7 @@
   border-bottom: 2px dashed #aacefa;
   box-shadow: none;
   border-radius: 5px;
+  max-width: 35vw;
   align-self: center;
 }
 
