--- a/src/mainpage.css
+++ b/src/mainpage.css
@@ -3,6 +3,7 @@
   display:flex;
   flex-wrap: nowrap;
   justify-content: space-between;
+  min-width: 80vw;
 }
 
 .flex-clock{
@@ -41,19 +42,9 @@
   margin: 5px;
 }
 
-.welcome-text {
+.welcome-text-main {
   color: #290a53;
   display:flex;
   justify-content: flex-start;
   margin: 0px 0px 20px 5px;
-}
-
-.silly-quote-flex {
-  margin: 0px;
-  padding: 22.5px;
-  opacity: 0.5;
-  max-width: 70vw;
-  display:flex;
-  justify-content: center;
-  align-items: center;
 }
